# VGON

./: .gitignore  .readthedocs.yaml  404.html  CNAME  README.md  VGON_BP_demo.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: MkDocs.yml
BP/HXXZ/: plot.py  vgon_xxz.py  vqe_xxz.py
BP/HXXZ/result/: GS_18.mat
BP/HXXZ/result/data/: vgon_nq18_nl48_[8192 4096 2048 1024  512  256  128]_lr_0.0001_latent100_batch8_KL_coeff0.1_fidelity.csv  vgon_nq18_nl48_[8192 4096 2048 1024  512  256  128]_lr_0.0001_latent100_batch8_KL_coeff0.1_history.csv  vqe_nq18_nl48_lr0.01_energy.csv  vqe_nq18_nl48_lr0.01_init1e-2_energy.csv  vqe_nq18_nl48_lr0.01_init1e-2_fidelity.csv
BP/Z1Z2/: plot.py  vgon_z1z2.py  vqe_z1z2.py
BP/Z1Z2/result/data/: vgon_nq20_nl400_seed923_history.csv  vqe_nq20_nl400_seed923_energy.csv  vqe_nq20_nl400_seed923_init1e-2_energy.csv
BP/__MACOSX/Z1Z2/: ._plot.py
Degeneracy/: Degene_232.mat  MG.py  plot.py
Degeneracy/H232/: H232.py  plot.py
Degeneracy/H232/results/: Site_11_degenerate_232.mat
Degeneracy/MG/: MG.py  plot.py
Gap/: Mix.py  Mix.rst  plotGap.m
Gap/results/: DatainPaper_10000_1.mat  model.pth
SUMMARY/: index.html
docs/: README.md  SUMMARY.md  conf.py  index.rst
search/: search_index.json
