[project]
name = "vgon"
version = "0.1.0"
description = "Variational Generative Optimization Network (VGON)."
authors = []
requires-python = ">=3.10"

dependencies = [
    "torch",
    "toqito>=1.1.2",
]

[dependency-groups]
optimization = [
    "cvxpy>=1.7.2",
    "cvxpylayers>=0.1.9",
]
quantumsim = [
    "pennylane>=0.42.3",
]

[project.optional-dependencies]
# 可以保留 plot 组用于明确安装
# uv sync -U --extra plot
# you could cancle 'plot' block to use basic feature.
plot = [
    "pandas", 
    "seaborn",
    "ptitprince",
    "scipy",
]
notebook = [
    "ipykernel>=6.30.1",
]

[tool.uv.sources]
torch = { index = "pytorch" }
ptiprince = {git = "https://github.com/leo2www/PtitPrince.git"}
# pennylane = { git = "https://github.com/PennyLaneAI/pennylane.git" }
# seaborn = {git = "https://github.com/mwaskom/seaborn.git"}

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true