[project]
name = "vgon"
version = "0.1.0"
description = "Variational Generative Optimization Network (VGON)."
authors = [
    {name = "Lingxia Zhang"},
    {name = "Xiaodie Lin"}
]
requires-python = ">=3.11"

dependencies = []

[project.optional-dependencies]
core = [
        "torch",
    "toqito>=1.1.2",
    "cvxpy>=1.7.2",
    "cvxpylayers>=0.1.9",
    "pennylane>=0.42.3",
    "pennylane-lightning>=0.42.0",
]

# uv sync --extra plot --extra notebook -U
# you could cancle 'plot' block to use basic feature.
plot = [
    "pandas>=2.3.2",
    "ptiprince>=0.2.7",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
]
notebook = [
    "ipykernel>=6.30.1",
]
doc = [
    "mkdocs-material",
    "mkdocs-literate-nav>=0.6.2",
    "mdx-truly-sane-lists>=1.3",
]

# All optional dependencies
full = [
    "vgon[core,plot,notebook,doc]"
]

# do NOT pack anything.
[tool.setuptools]
packages = []
py-modules = []

[project.urls]
Homepage = "https://vgon.funqitang.cn"
Repository = "https://github.com/zhangjianjianzz/VGON.git"
Documentation = "https://vgon.funqitang.cn"



[tool.uv.sources]
# "pytorch-cpu", "pytorch-cuda"
# For users outside of CUDA eco, redirect torch.index to "pytorch-cpu"
torch = { index = "pytorch-cuda" }
# dependency-updated repo forked from [pog87/PtitPrince](https://github.com/pog87/PtitPrince.git) 
ptiprince = {git = "https://github.com/leo2www/PtitPrince.git"}
mkdocs-material = { git = "https://github.com/squidfunk/mkdocs-material.git" }

# pennylane = { git = "https://github.com/PennyLaneAI/pennylane.git" }
# seaborn = {git = "https://github.com/mwaskom/seaborn.git"}



[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
